# sentinel

./: Cargo.toml
migration/: Cargo.toml
migration/src/: lib.rs  m20251122_070217_create_namespaces.rs  m20251122_070408_create_resources.rs  m20251122_090721_create_users.rs  m20251122_100616_create_groups.rs  m20251122_115332_create_permissions.rs
migrations/2025-10-26-060220-0000_resources/: down.sql  up.sql
migrations/2025-10-26-100700-0000_users/: up.sql
migrations/2025-10-26-100703-0000_groups/: down.sql  up.sql
migrations/2025-10-26-103310-0000_permissions/: up.sql
