[package]
name = "sentinel"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["macros"] }
sea-orm = { version = "2.0.0-rc", features = ["sqlx-postgres", "sqlx-sqlite", "sqlx-mysql", "runtime-tokio-rustls", "macros" ] }
dotenvy = "0.15.7"
r2d2 = "0.8.10"
serde = { version = "1.0.228", features = ["derive"] }
snowflake-id-generator = "0.3.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5.2", features = ["timeout"] }
argon2 = "0.5.3"
